src/vlp/vlpYacc.output
State 338 conflicts: 1 shift/reduce
State 394 conflicts: 1 shift/reduce
State 395 conflicts: 1 shift/reduce
State 396 conflicts: 1 shift/reduce
State 449 conflicts: 1 shift/reduce


Grammar

    0 $accept: source_text $end

    1 source_text: /* empty */
    2            | source_text description

    3 description: module
    4            | define

    5 @1: /* empty */

    6 @2: /* empty */

    7 define: YYDEFINE @1 YYID @2 target_statement

    8 target_statement: expression
    9                 | expression ':' expression
   10                 | YYDEF_NULL

   11 @3: /* empty */

   12 module: YYMODULE YYID @3 port_list_opt ';' module_item_clr YYENDMODULE

   13 port_list_opt: /* empty */
   14              | '(' port_list ')'
   15              | '(' io_declaration_list ')'

   16 port_list: port
   17          | port_list ',' port

   18 port: port_expression_opt

   19 port_expression_opt: /* empty */
   20                    | port_expression

   21 port_expression: port_reference

   22 @4: /* empty */

   23 port_reference: YYID @4 port_reference_arg

   24 port_reference_arg: /* empty */
   25                   | '[' expression ']'
   26                   | '[' expression ':' expression ']'

   27 io_declaration_list: io_declaration
   28                    | io_declaration_list ',' io_declaration

   29 io_declaration: YYINPUT range_opt identifier
   30               | YYOUTPUT range_opt identifier
   31               | YYINOUT range_opt identifier

   32 module_item_clr: /* empty */
   33                | module_item_clr module_item

   34 module_item: parameter_declaration
   35            | input_declaration
   36            | output_declaration
   37            | inout_declaration
   38            | net_declaration
   39            | reg_declaration
   40            | integer_declaration
   41            | gate_instantiation
   42            | module_or_primitive_instantiation
   43            | parameter_override
   44            | continuous_assign
   45            | always_statement
   46            | task
   47            | function
   48            | define

   49 @5: /* empty */

   50 task: YYTASK YYID @5 ';' tf_declaration_clr statement_opt YYENDTASK

   51 @6: /* empty */

   52 function: YYFUNCTION range_or_type_opt YYID @6 ';' tf_declaration_eclr statement_opt YYENDFUNCTION

   53 range_or_type_opt: /* empty */
   54                  | range_or_type

   55 range_or_type: range
   56              | YYINTEGER

   57 tf_declaration_clr: /* empty */
   58                   | tf_declaration_clr tf_declaration

   59 tf_declaration_eclr: tf_declaration
   60                    | tf_declaration_eclr tf_declaration

   61 tf_declaration: parameter_declaration
   62               | input_declaration
   63               | output_declaration
   64               | inout_declaration
   65               | reg_declaration
   66               | integer_declaration

   67 @7: /* empty */

   68 parameter_declaration: YYPARAMETER range_opt @7 assignment_list ';'

   69 @8: /* empty */

   70 input_declaration: YYINPUT range_opt @8 variable_list ';'

   71 @9: /* empty */

   72 output_declaration: YYOUTPUT range_opt @9 variable_list ';'

   73 @10: /* empty */

   74 inout_declaration: YYINOUT range_opt @10 variable_list ';'

   75 net_declaration: nettype drive_strength_opt expandrange_opt assignment_list ';'
   76                | nettype drive_strength_opt expandrange_opt variable_list ';'

   77 nettype: YYSWIRE
   78        | YYWIRE
   79        | YYTRI
   80        | YYTRI1
   81        | YYSUPPLY0
   82        | YYWAND
   83        | YYTRIAND
   84        | YYTRI0
   85        | YYSUPPLY1
   86        | YYWOR
   87        | YYTRIOR

   88 expandrange_opt: /* empty */
   89                | expandrange

   90 expandrange: range

   91 @11: /* empty */

   92 reg_declaration: YYREG range_opt @11 register_variable_list ';'

   93 @12: /* empty */

   94 integer_declaration: YYINTEGER @12 register_variable_list ';'

   95 @13: /* empty */

   96 continuous_assign: YYASSIGN @13 assignment_list ';'

   97 @14: /* empty */

   98 parameter_override: YYDEFPARAM @14 assignment_list ';'

   99 variable_list: identifier
  100              | variable_list ',' identifier

  101 register_variable_list: register_variable
  102                       | register_variable_list ',' register_variable

  103 register_variable: name_of_register
  104                  | name_of_register '[' expression ':' expression ']'
  105                  | name_of_register '[' YYDEF_ID ']'

  106 name_of_register: YYID

  107 drive_strength_opt: /* empty */
  108                   | drive_strength

  109 drive_strength: '(' strength0 ',' strength1 ')'
  110               | '(' strength1 ',' strength0 ')'

  111 strength0: YYSUPPLY0
  112          | YYSTRONG0
  113          | YYPULL0
  114          | YYWEAK0
  115          | YYHIGHZ0

  116 strength1: YYSUPPLY1
  117          | YYSTRONG1
  118          | YYPULL1
  119          | YYWEAK1
  120          | YYHIGHZ1

  121 range_opt: /* empty */
  122          | range

  123 range: '[' expression ':' expression ']'
  124      | '[' YYDEF_ID ']'

  125 assignment_list: assignment
  126                | assignment_list ',' assignment

  127 gate_instantiation: gatetype gate_instance_list ';'

  128 gatetype: YYAND
  129         | YYNAND
  130         | YYOR
  131         | YYNOR
  132         | YYXOR
  133         | YYXNOR
  134         | YYBUF
  135         | YYBUFIF0
  136         | YYBUFIF1
  137         | YYNOT

  138 gate_instance_list: gate_instance
  139                   | gate_instance_list ',' gate_instance

  140 gate_instance: '(' terminal_list ')'
  141              | name_of_gate_instance '(' terminal_list ')'

  142 name_of_gate_instance: YYID

  143 terminal_list: terminal
  144              | terminal_list ',' terminal

  145 terminal: expression

  146 module_or_primitive_instantiation: name_of_module_or_primitive module_or_primitive_option_clr module_or_primitive_instance_list ';'

  147 name_of_module_or_primitive: YYID
  148                            | YYDEF_ID

  149 module_or_primitive_option_clr: /* empty */
  150                               | module_or_primitive_option_clr module_or_primitive_option

  151 module_or_primitive_option: delay_or_parameter_value_assignment

  152 delay_or_parameter_value_assignment: '#' YYINUMBER
  153                                    | '#' YYRNUMBER
  154                                    | '#' identifier
  155                                    | '#' '(' mintypmax_expression_list ')'

  156 module_or_primitive_instance_list: module_or_primitive_instance
  157                                  | module_or_primitive_instance_list ',' module_or_primitive_instance

  158 module_or_primitive_instance: '(' module_connection_list ')'

  159 @15: /* empty */

  160 module_or_primitive_instance: identifier @15 '(' module_connection_list ')'

  161 module_connection_list: module_port_connection_list
  162                       | named_port_connection_list

  163 module_port_connection_list: module_port_connection
  164                            | module_port_connection_list ',' module_port_connection

  165 named_port_connection_list: named_port_connection
  166                           | named_port_connection_list ',' named_port_connection

  167 module_port_connection: /* empty */
  168                       | expression

  169 @16: /* empty */

  170 named_port_connection: '.' identifier @16 '(' connect_port ')'

  171 connect_port: /* empty */
  172             | expression

  173 always_statement: YYALWAYS statement

  174 statement_opt: /* empty */
  175              | statement

  176 statement_clr: /* empty */
  177              | statement_clr statement

  178 statement: ';'
  179          | assignment ';'
  180          | YYIF '(' expression ')' statement
  181          | YYIF '(' expression ')' statement YYELSE statement
  182          | YYCASE '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  183          | YYCASEZ '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  184          | YYCASEX '(' expression ')' synopsys_directive case_item_eclr YYENDCASE
  185          | YYFOR '(' assignment ';' expression ';' assignment ')' statement
  186          | event_control statement
  187          | lvalue '=' delay_control expression ';'
  188          | lvalue YYNBASSIGN delay_control expression ';'
  189          | seq_block
  190          | task_enable
  191          | YYASSIGN assignment ';'

  192 synopsys_directive: /* empty */
  193                   | FULL_CASE
  194                   | PARALLEL_CASE
  195                   | FULL_CASE PARALLEL_CASE
  196                   | PARALLEL_CASE FULL_CASE

  197 assignment: lvalue '=' expression
  198           | lvalue YYNBASSIGN expression

  199 case_item_eclr: case_item
  200               | case_item_eclr case_item

  201 case_item: expression_list ':' statement
  202          | YYDEFAULT ':' statement
  203          | YYDEFAULT statement

  204 seq_block: YYBEGIN statement_clr YYEND
  205          | YYBEGIN ':' name_of_block block_declaration_clr statement_clr YYEND

  206 name_of_block: YYID

  207 block_declaration_clr: /* empty */
  208                      | block_declaration_clr block_declaration

  209 block_declaration: parameter_declaration
  210                  | reg_declaration

  211 @17: /* empty */

  212 task_enable: YYID @17 ';'

  213 @18: /* empty */

  214 task_enable: YYID @18 '(' expression_list ')' ';'

  215 lvalue: identifier

  216 @19: /* empty */

  217 lvalue: identifier @19 bitExpression
  218       | concatenation
  219       | YYDEF_ID bit_exp

  220 bit_exp: /* empty */
  221        | bitExpression

  222 mintypmax_expression_list: mintypmax_expression
  223                          | mintypmax_expression_list ',' mintypmax_expression

  224 mintypmax_expression: expression

  225 expression_list: expression
  226                | expression_list ',' expression

  227 expression: primary
  228           | '+' primary
  229           | '-' primary
  230           | '!' primary
  231           | '~' primary
  232           | '&' primary
  233           | '|' primary
  234           | '^' primary
  235           | YYLOGNAND primary
  236           | YYLOGNOR primary
  237           | YYLOGXNOR primary
  238           | expression '+' expression
  239           | expression '-' expression
  240           | expression '*' expression
  241           | expression YYLOGEQUALITY expression
  242           | expression YYLOGINEQUALITY expression
  243           | expression YYCASEEQUALITY expression
  244           | expression YYCASEINEQUALITY expression
  245           | expression YYLOGAND expression
  246           | expression YYLOGOR expression
  247           | expression '<' expression
  248           | expression '>' expression
  249           | expression '&' expression
  250           | expression '|' expression
  251           | expression '^' expression
  252           | expression YYLEQ expression
  253           | expression YYNBASSIGN expression
  254           | expression YYGEQ expression
  255           | expression YYLSHIFT expression
  256           | expression YYRSHIFT expression
  257           | expression YYLOGXNOR expression
  258           | expression '?' expression ':' expression

  259 primary: YYINUMBER
  260        | YYRNUMBER
  261        | identifier

  262 @20: /* empty */

  263 primary: identifier @20 bitExpression
  264        | concatenation
  265        | multiple_concatenation
  266        | function_call
  267        | YYBIT_BASE_STRING
  268        | '(' expression ')'
  269        | YYDEF_ID bit_exp

  270 bitExpression: '[' expression ']'
  271              | '[' expression ':' expression ']'

  272 concatenation: '{' expression_list '}'

  273 multiple_concatenation: '{' expression '{' expression_list '}' '}'

  274 @21: /* empty */

  275 function_call: identifier '(' @21 expression_list ')'

  276 identifier: YYID

  277 @22: /* empty */

  278 identifier: identifier '.' @22 YYID

  279 delay_control: '#' YYINUMBER
  280              | '#' YYRNUMBER
  281              | '#' identifier
  282              | '#' '(' mintypmax_expression ')'

  283 event_control: '@' '(' event_expression ')'
  284              | '@' '(' ored_event_expression ')'
  285              | '@' '*'
  286              | '@' '(' '*' ')'

  287 event_expression: expression
  288                 | YYPOSEDGE expression
  289                 | YYNEGEDGE expression
  290                 | YYEDGE expression

  291 ored_event_expression: event_expression or_expression event_expression
  292                      | ored_event_expression or_expression event_expression

  293 or_expression: YYOR
  294              | YYLOGOR
  295              | ','


Terminals, with rules where they appear

$end (0) 0
'!' (33) 230
'#' (35) 152 153 154 155 279 280 281 282
'&' (38) 232 249
'(' (40) 14 15 109 110 140 141 155 158 160 170 180 181 182 183 184
    185 214 268 275 282 283 284 286
')' (41) 14 15 109 110 140 141 155 158 160 170 180 181 182 183 184
    185 214 268 275 282 283 284 286
'*' (42) 240 285 286
'+' (43) 228 238
',' (44) 17 28 100 102 109 110 126 139 144 157 164 166 223 226 295
'-' (45) 229 239
'.' (46) 170 278
':' (58) 9 26 104 123 201 202 205 258 271
';' (59) 12 50 52 68 70 72 74 75 76 92 94 96 98 127 146 178 179 185
    187 188 191 212 214
'<' (60) 247
'=' (61) 187 197
'>' (62) 248
'?' (63) 258
'@' (64) 283 284 285 286
'[' (91) 25 26 104 105 123 124 270 271
']' (93) 25 26 104 105 123 124 270 271
'^' (94) 234 251
'{' (123) 272 273
'|' (124) 233 250
'}' (125) 272 273
'~' (126) 231
error (256)
YYID (258) 7 12 23 50 52 106 142 147 206 212 214 276 278
YYDEF_ID (259) 105 124 148 219 269
YYINUMBER (260) 152 259 279
YYRNUMBER (261) 153 260 280
YYBIT_BASE_STRING (262) 267
YYALWAYS (263) 173
YYAND (264) 128
YYASSIGN (265) 96 191
YYBEGIN (266) 204 205
YYBUF (267) 134
YYBUFIF0 (268) 135
YYBUFIF1 (269) 136
YYCASE (270) 182
YYCASEX (271) 184
YYCASEZ (272) 183
YYDEFAULT (273) 202 203
YYDEFPARAM (274) 98
YYELSE (275) 181
YYEDGE (276) 290
YYEND (277) 204 205
YYENDCASE (278) 182 183 184
YYENDMODULE (279) 12
YYENDFUNCTION (280) 52
YYENDTASK (281) 50
YYFOR (282) 185
YYFUNCTION (283) 52
YYGEQ (284) 254
YYHIGHZ0 (285) 115
YYHIGHZ1 (286) 120
YYIF (287) 180 181
YYINOUT (288) 31 74
YYINPUT (289) 29 70
YYINTEGER (290) 56 94
YYLEQ (291) 252
YYLOGAND (292) 245
YYCASEEQUALITY (293) 243
YYCASEINEQUALITY (294) 244
YYLOGNAND (295) 235
YYLOGNOR (296) 236
YYLOGOR (297) 246 294
YYLOGXNOR (298) 237 257
YYLOGEQUALITY (299) 241
YYLOGINEQUALITY (300) 242
YYLSHIFT (301) 255
YYMODULE (302) 12
YYNAND (303) 129
YYNBASSIGN (304) 188 198 253
YYNEGEDGE (305) 289
YYNOR (306) 131
YYNOT (307) 137
YYOR (308) 130 293
YYOUTPUT (309) 30 72
YYPARAMETER (310) 68
YYPOSEDGE (311) 288
YYPULL0 (312) 113
YYPULL1 (313) 118
YYREG (314) 92
YYRSHIFT (315) 256
YYSTRONG0 (316) 112
YYSTRONG1 (317) 117
YYSUPPLY0 (318) 81 111
YYSUPPLY1 (319) 85 116
YYSWIRE (320) 77
YYTASK (321) 50
YYTRI (322) 79
YYTRI0 (323) 84
YYTRI1 (324) 80
YYTRIAND (325) 83
YYTRIOR (326) 87
YYWAND (327) 82
YYWEAK0 (328) 114
YYWEAK1 (329) 119
YYWIRE (330) 78
YYWOR (331) 86
YYXNOR (332) 133
YYXOR (333) 132
YYDEFINE (334) 7
YYDEF_NULL (335) 10
PARALLEL_CASE (336) 194 195 196
FULL_CASE (337) 193 195 196
YYUNARYOPERATOR (338)


Nonterminals, with rules where they appear

$accept (108)
    on left: 0
source_text (109)
    on left: 1 2, on right: 0 2
description (110)
    on left: 3 4, on right: 2
define (111)
    on left: 7, on right: 4 48
@1 (112)
    on left: 5, on right: 7
@2 (113)
    on left: 6, on right: 7
target_statement (114)
    on left: 8 9 10, on right: 7
module (115)
    on left: 12, on right: 3
@3 (116)
    on left: 11, on right: 12
port_list_opt (117)
    on left: 13 14 15, on right: 12
port_list (118)
    on left: 16 17, on right: 14 17
port (119)
    on left: 18, on right: 16 17
port_expression_opt (120)
    on left: 19 20, on right: 18
port_expression (121)
    on left: 21, on right: 20
port_reference (122)
    on left: 23, on right: 21
@4 (123)
    on left: 22, on right: 23
port_reference_arg (124)
    on left: 24 25 26, on right: 23
io_declaration_list (125)
    on left: 27 28, on right: 15 28
io_declaration (126)
    on left: 29 30 31, on right: 27 28
module_item_clr (127)
    on left: 32 33, on right: 12 33
module_item (128)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48,
    on right: 33
task (129)
    on left: 50, on right: 46
@5 (130)
    on left: 49, on right: 50
function (131)
    on left: 52, on right: 47
@6 (132)
    on left: 51, on right: 52
range_or_type_opt (133)
    on left: 53 54, on right: 52
range_or_type (134)
    on left: 55 56, on right: 54
tf_declaration_clr (135)
    on left: 57 58, on right: 50 58
tf_declaration_eclr (136)
    on left: 59 60, on right: 52 60
tf_declaration (137)
    on left: 61 62 63 64 65 66, on right: 58 59 60
parameter_declaration (138)
    on left: 68, on right: 34 61 209
@7 (139)
    on left: 67, on right: 68
input_declaration (140)
    on left: 70, on right: 35 62
@8 (141)
    on left: 69, on right: 70
output_declaration (142)
    on left: 72, on right: 36 63
@9 (143)
    on left: 71, on right: 72
inout_declaration (144)
    on left: 74, on right: 37 64
@10 (145)
    on left: 73, on right: 74
net_declaration (146)
    on left: 75 76, on right: 38
nettype (147)
    on left: 77 78 79 80 81 82 83 84 85 86 87, on right: 75 76
expandrange_opt (148)
    on left: 88 89, on right: 75 76
expandrange (149)
    on left: 90, on right: 89
reg_declaration (150)
    on left: 92, on right: 39 65 210
@11 (151)
    on left: 91, on right: 92
integer_declaration (152)
    on left: 94, on right: 40 66
@12 (153)
    on left: 93, on right: 94
continuous_assign (154)
    on left: 96, on right: 44
@13 (155)
    on left: 95, on right: 96
parameter_override (156)
    on left: 98, on right: 43
@14 (157)
    on left: 97, on right: 98
variable_list (158)
    on left: 99 100, on right: 70 72 74 76 100
register_variable_list (159)
    on left: 101 102, on right: 92 94 102
register_variable (160)
    on left: 103 104 105, on right: 101 102
name_of_register (161)
    on left: 106, on right: 103 104 105
drive_strength_opt (162)
    on left: 107 108, on right: 75 76
drive_strength (163)
    on left: 109 110, on right: 108
strength0 (164)
    on left: 111 112 113 114 115, on right: 109 110
strength1 (165)
    on left: 116 117 118 119 120, on right: 109 110
range_opt (166)
    on left: 121 122, on right: 29 30 31 68 70 72 74 92
range (167)
    on left: 123 124, on right: 55 90 122
assignment_list (168)
    on left: 125 126, on right: 68 75 96 98 126
gate_instantiation (169)
    on left: 127, on right: 41
gatetype (170)
    on left: 128 129 130 131 132 133 134 135 136 137,
    on right: 127
gate_instance_list (171)
    on left: 138 139, on right: 127 139
gate_instance (172)
    on left: 140 141, on right: 138 139
name_of_gate_instance (173)
    on left: 142, on right: 141
terminal_list (174)
    on left: 143 144, on right: 140 141 144
terminal (175)
    on left: 145, on right: 143 144
module_or_primitive_instantiation (176)
    on left: 146, on right: 42
name_of_module_or_primitive (177)
    on left: 147 148, on right: 146
module_or_primitive_option_clr (178)
    on left: 149 150, on right: 146 150
module_or_primitive_option (179)
    on left: 151, on right: 150
delay_or_parameter_value_assignment (180)
    on left: 152 153 154 155, on right: 151
module_or_primitive_instance_list (181)
    on left: 156 157, on right: 146 157
module_or_primitive_instance (182)
    on left: 158 160, on right: 156 157
@15 (183)
    on left: 159, on right: 160
module_connection_list (184)
    on left: 161 162, on right: 158 160
module_port_connection_list (185)
    on left: 163 164, on right: 161 164
named_port_connection_list (186)
    on left: 165 166, on right: 162 166
module_port_connection (187)
    on left: 167 168, on right: 163 164
named_port_connection (188)
    on left: 170, on right: 165 166
@16 (189)
    on left: 169, on right: 170
connect_port (190)
    on left: 171 172, on right: 170
always_statement (191)
    on left: 173, on right: 45
statement_opt (192)
    on left: 174 175, on right: 50 52
statement_clr (193)
    on left: 176 177, on right: 177 204 205
statement (194)
    on left: 178 179 180 181 182 183 184 185 186 187 188 189 190 191
   , on right: 173 175 177 180 181 185 186 201 202 203
synopsys_directive (195)
    on left: 192 193 194 195 196, on right: 182 183 184
assignment (196)
    on left: 197 198, on right: 125 126 179 185 191
case_item_eclr (197)
    on left: 199 200, on right: 182 183 184 200
case_item (198)
    on left: 201 202 203, on right: 199 200
seq_block (199)
    on left: 204 205, on right: 189
name_of_block (200)
    on left: 206, on right: 205
block_declaration_clr (201)
    on left: 207 208, on right: 205 208
block_declaration (202)
    on left: 209 210, on right: 208
task_enable (203)
    on left: 212 214, on right: 190
@17 (204)
    on left: 211, on right: 212
@18 (205)
    on left: 213, on right: 214
lvalue (206)
    on left: 215 217 218 219, on right: 187 188 197 198
@19 (207)
    on left: 216, on right: 217
bit_exp (208)
    on left: 220 221, on right: 219 269
mintypmax_expression_list (209)
    on left: 222 223, on right: 155 223
mintypmax_expression (210)
    on left: 224, on right: 222 223 282
expression_list (211)
    on left: 225 226, on right: 201 214 226 272 273 275
expression (212)
    on left: 227 228 229 230 231 232 233 234 235 236 237 238 239 240
    241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256
    257 258, on right: 8 9 25 26 104 123 145 168 172 180 181 182 183
    184 185 187 188 197 198 224 225 226 238 239 240 241 242 243 244
    245 246 247 248 249 250 251 252 253 254 255 256 257 258 268 270
    271 273 287 288 289 290
primary (213)
    on left: 259 260 261 263 264 265 266 267 268 269,
    on right: 227 228 229 230 231 232 233 234 235 236 237
@20 (214)
    on left: 262, on right: 263
bitExpression (215)
    on left: 270 271, on right: 217 221 263
concatenation (216)
    on left: 272, on right: 218 264
multiple_concatenation (217)
    on left: 273, on right: 265
function_call (218)
    on left: 275, on right: 266
@21 (219)
    on left: 274, on right: 275
identifier (220)
    on left: 276 278, on right: 29 30 31 99 100 154 160 170 215 217
    261 263 275 278 281
@22 (221)
    on left: 277, on right: 278
delay_control (222)
    on left: 279 280 281 282, on right: 187 188
event_control (223)
    on left: 283 284 285 286, on right: 186
event_expression (224)
    on left: 287 288 289 290, on right: 283 291 292
ored_event_expression (225)
    on left: 291 292, on right: 284 292
or_expression (226)
    on left: 293 294 295, on right: 291 292


state 0

    0 $accept: . source_text $end

    $default  reduce using rule 1 (source_text)

    source_text  go to state 1


state 1

    0 $accept: source_text . $end
    2 source_text: source_text . description

    $end      shift, and go to state 2
    YYMODULE  shift, and go to state 3
    YYDEFINE  shift, and go to state 4

    description  go to state 5
    define       go to state 6
    module       go to state 7


state 2

    0 $accept: source_text $end .

    $default  accept


state 3

   12 module: YYMODULE . YYID @3 port_list_opt ';' module_item_clr YYENDMODULE

    YYID  shift, and go to state 8


state 4

    7 define: YYDEFINE . @1 YYID @2 target_statement

    $default  reduce using rule 5 (@1)

    @1  go to state 9


state 5

    2 source_text: source_text description .

    $default  reduce using rule 2 (source_text)


state 6

    4 description: define .

    $default  reduce using rule 4 (description)


state 7

    3 description: module .

    $default  reduce using rule 3 (description)


state 8

   12 module: YYMODULE YYID . @3 port_list_opt ';' module_item_clr YYENDMODULE

    $default  reduce using rule 11 (@3)

    @3  go to state 10


state 9

    7 define: YYDEFINE @1 . YYID @2 target_statement

    YYID  shift, and go to state 11


state 10

   12 module: YYMODULE YYID @3 . port_list_opt ';' module_item_clr YYENDMODULE

    '('  shift, and go to state 12

    $default  reduce using rule 13 (port_list_opt)

    port_list_opt  go to state 13


state 11

    7 define: YYDEFINE @1 YYID . @2 target_statement

    $default  reduce using rule 6 (@2)

    @2  go to state 14


state 12

   14 port_list_opt: '(' . port_list ')'
   15              | '(' . io_declaration_list ')'

    YYID      shift, and go to state 15
    YYINOUT   shift, and go to state 16
    YYINPUT   shift, and go to state 17
    YYOUTPUT  shift, and go to state 18

    $default  reduce using rule 19 (port_expression_opt)

    port_list            go to state 19
    port                 go to state 20
    port_expression_opt  go to state 21
    port_expression      go to state 22
    port_reference       go to state 23
    io_declaration_list  go to state 24
    io_declaration       go to state 25


state 13

   12 module: YYMODULE YYID @3 port_list_opt . ';' module_item_clr YYENDMODULE

    ';'  shift, and go to state 26


state 14

    7 define: YYDEFINE @1 YYID @2 . target_statement

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    YYLOGNAND          shift, and go to state 32
    YYLOGNOR           shift, and go to state 33
    YYLOGXNOR          shift, and go to state 34
    YYDEF_NULL         shift, and go to state 35
    '|'                shift, and go to state 36
    '^'                shift, and go to state 37
    '&'                shift, and go to state 38
    '+'                shift, and go to state 39
    '-'                shift, and go to state 40
    '~'                shift, and go to state 41
    '!'                shift, and go to state 42
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    target_statement        go to state 45
    expression              go to state 46
    primary                 go to state 47
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 15

   23 port_reference: YYID . @4 port_reference_arg

    $default  reduce using rule 22 (@4)

    @4  go to state 52


state 16

   31 io_declaration: YYINOUT . range_opt identifier

    '['  shift, and go to state 53

    $default  reduce using rule 121 (range_opt)

    range_opt  go to state 54
    range      go to state 55


state 17

   29 io_declaration: YYINPUT . range_opt identifier

    '['  shift, and go to state 53

    $default  reduce using rule 121 (range_opt)

    range_opt  go to state 56
    range      go to state 55


state 18

   30 io_declaration: YYOUTPUT . range_opt identifier

    '['  shift, and go to state 53

    $default  reduce using rule 121 (range_opt)

    range_opt  go to state 57
    range      go to state 55


state 19

   14 port_list_opt: '(' port_list . ')'
   17 port_list: port_list . ',' port

    ')'  shift, and go to state 58
    ','  shift, and go to state 59


state 20

   16 port_list: port .

    $default  reduce using rule 16 (port_list)


state 21

   18 port: port_expression_opt .

    $default  reduce using rule 18 (port)


state 22

   20 port_expression_opt: port_expression .

    $default  reduce using rule 20 (port_expression_opt)


state 23

   21 port_expression: port_reference .

    $default  reduce using rule 21 (port_expression)


state 24

   15 port_list_opt: '(' io_declaration_list . ')'
   28 io_declaration_list: io_declaration_list . ',' io_declaration

    ')'  shift, and go to state 60
    ','  shift, and go to state 61


state 25

   27 io_declaration_list: io_declaration .

    $default  reduce using rule 27 (io_declaration_list)


state 26

   12 module: YYMODULE YYID @3 port_list_opt ';' . module_item_clr YYENDMODULE

    $default  reduce using rule 32 (module_item_clr)

    module_item_clr  go to state 62


state 27

  276 identifier: YYID .

    $default  reduce using rule 276 (identifier)


state 28

  269 primary: YYDEF_ID . bit_exp

    '['  shift, and go to state 63

    $default  reduce using rule 220 (bit_exp)

    bit_exp        go to state 64
    bitExpression  go to state 65


state 29

  259 primary: YYINUMBER .

    $default  reduce using rule 259 (primary)


state 30

  260 primary: YYRNUMBER .

    $default  reduce using rule 260 (primary)


state 31

  267 primary: YYBIT_BASE_STRING .

    $default  reduce using rule 267 (primary)


state 32

  235 expression: YYLOGNAND . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 66
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 33

  236 expression: YYLOGNOR . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 67
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 34

  237 expression: YYLOGXNOR . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 68
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 35

   10 target_statement: YYDEF_NULL .

    $default  reduce using rule 10 (target_statement)


state 36

  233 expression: '|' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 69
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 37

  234 expression: '^' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 70
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 38

  232 expression: '&' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 71
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 39

  228 expression: '+' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 72
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 40

  229 expression: '-' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 73
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 41

  231 expression: '~' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 74
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 42

  230 expression: '!' . primary

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    primary                 go to state 75
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 43

  268 primary: '(' . expression ')'

    YYID               shift, and go to state 27
    YYDEF_ID           shift, and go to state 28
    YYINUMBER          shift, and go to state 29
    YYRNUMBER          shift, and go to state 30
    YYBIT_BASE_STRING  shift, and go to state 31
    YYLOGNAND          shift, and go to state 32
    YYLOGNOR           shift, and go to state 33
    YYLOGXNOR          shift, and go to state 34
    '|'                shift, and go to state 36
    '^'                shift, and go to state 37
    '&'                shift, and go to state 38
    '+'                shift, and go to state 39
    '-'                shift, and go to state 40
    '~'                shift, and go to state 41
    '!'                shift, and go to state 42
    '('                shift, and go to state 43
    '{'                shift, and go to state 44

    expression              go to state 76
    primary                 go to state 47
    concatenation           go to state 48
    multiple_concatenation  go to state 49
    function_call           go to state 50
    identifier              go to state 51


state 44

  272 concatenation: '{' . expression_list '}'
  273 multiple_concatenation: '{' . expression '{' expression_list '}' '}'
